# ssmtui

./: Cargo.toml  README.md
.github/workflows/: publish.yml  release.yml  update-homebrew.yml
Formula/: ssmtui.rb
lazycore/: README.md  boxlayout.md  howtouselazycore.md  utils.md
src/: app.rs  aws_ssm.rs  editor_tools.rs  main.rs  models.rs  text_edit.rs  ui.rs
