[package]
name = "ssmtui"
version = "1.0.1"
edition = "2024"
description = "Terminal UI for AWS SSM Parameter Store (Rust + ratatui)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/suraj16thjan/ssmtui"
homepage = "https://github.com/suraj16thjan/ssmtui"
keywords = ["aws", "ssm", "tui", "ratatui", "cli"]
categories = ["command-line-utilities"]

[dependencies]
aws-config = "1"
aws-sdk-ssm = "1"
aws-types = "1"
crossterm = "0.29"
ratatui = "0.29"
tokio = { version = "1", features = ["rt-multi-thread"] }
